# llm-ddi-extraction

./: .gitignore  README.md  pyproject.toml
data/: gpt_annotations.csv  initial_diff.csv  manual_annotations.csv  merged_diff.csv  michael_annotations.csv  rxnorm_ingredients_synonyms.tsv  to_manually_annotate.csv  undina_annotations.tsv
nb/: 1.prompt-llm.ipynb  2.export-to-manually-annotate.ipynb  3.build-consensus.ipynb  4.get_embeddings.ipynb  5.compare-embeddings.ipynb
src/undina_llm/: db.py  extract.py  llm.py  models.py
